Trying to call a new fragment with the calender app. (Trying to implement the start of google maps!)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="edit">edit</string>
     <string name="delete_note_example">this is how you will delete note</string>
     <string name="edit_note">Edit note</string>
+
+    <string name="map_info">Map info</string>
+    <string name="map_fragment">Map Fragment</string>
 </resources>
